--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
-apply plugin: 'ros-android' // This should go in addition to your existing
-                            // 'com.android.application' or 'com.android.library' plug-in.
+apply plugin: 'ros-android' // ROS integration stuff
 apply plugin: 'com.android.application'
 
 
@@ -13,6 +12,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -21,7 +21,12 @@ android {
         }
     }
 
-    // Exclude a few files that are duplicated across our dependencies and
+    // Test code to resolve dependency errors
+    configurations.all {
+        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
+    }
+
+    // Exclude files that are duplicated across Android/ROS dependencies and
     // prevent packaging Android applications.
     packagingOptions {
         exclude "META-INF/LICENSE.txt"
@@ -34,11 +39,13 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+    // rosjava dependencies
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.2.0'
-    testCompile 'junit:junit:4.12'
-
-    // You now now add any rosjava dependencies, like so:
     compile 'org.ros.android_core:android_10:[0.3,0.4)'
+    compile 'com.android.support:support-v4:25.2.0'
+    compile 'com.android.support:support-vector-drawable:25.2.0'
+    testCompile 'junit:junit:4.12'
 }
