Quad position now available to MainActivity

--- a/local.properties
+++ b/local.properties
@@ -8,4 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Mar 27 11:46:35 CDT 2017
-sdk.dir=/home/nidhirathod/Android/Sdk
+sdk.dir=/opt/Android/Sdk
