--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         tools:replace="android:icon">
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="landscape"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -54,6 +55,7 @@
         <!-- </activity> -->
         <activity
             android:name=".SettingsActivity"
+            android:screenOrientation="landscape"
             android:label="@string/title_activity_settings"
             android:parentActivityName=".MainActivity">
             <meta-data
@@ -62,14 +64,12 @@
         </activity>
         <activity
             android:name=".CanvasSizeActivity"
+            android:screenOrientation="landscape"
             android:label="@string/title_activity_canvas_size"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".CheckboxActivity"
-            android:label="@string/title_activity_checkbox"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
             android:name=".ObjectsActivity"
+            android:screenOrientation="landscape"
             android:label="@string/title_activity_objects"
             android:parentActivityName=".MainActivity">
             <meta-data
