--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,6 @@ dependencies {
     compile 'org.ros.android_core:android_10:[0.3,0.4)'
     compile 'com.android.support:support-v4:25.2.0'
     compile 'com.android.support:support-vector-drawable:25.2.0'
+    compile 'com.getbase:floatingactionbutton:1.10.1'
     testCompile 'junit:junit:4.12'
 }
