--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,11 +38,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
     // rosjava dependencies
     //compile 'org.ros.android_core:android_15:[0.3,0.4)'
     compile 'com.android.support:appcompat-v7:25.2.0'
@@ -53,4 +52,5 @@ dependencies {
     compile 'com.android.support:support-vector-drawable:25.2.0'
     compile 'com.getbase:floatingactionbutton:1.10.1'
     testCompile 'junit:junit:4.12'
+    compile files('libs/nav_msgs-1.12.5.jar')
 }
