--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,8 @@
         tools:replace="android:icon">
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="landscape"
             android:label="@string/app_name"
+            android:screenOrientation="landscape"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -55,13 +55,17 @@
         <!-- </activity> -->
         <activity
             android:name=".SettingsActivity"
-            android:screenOrientation="landscape"
             android:label="@string/title_activity_objects"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="landscape">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="utmg.android_interface.MainActivity" />
         </activity>
+        <activity
+            android:name=".Preview"
+            android:label="@string/title_activity_preview"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
