--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,5 @@ dependencies {
     compile 'com.android.support:support-vector-drawable:25.2.0'
     compile 'com.getbase:floatingactionbutton:1.10.1'
     testCompile 'junit:junit:4.12'
-
+    compile files('libs/app_pathplanner_interface-0.0.0.jar')
 }
