--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile files('libs/app_pathplanner_interface-0.0.0.jar')
     compile files('libs/mav_trajectory_generation_ros-0.0.0.jar')
+    compile files('libs/curve_compression-0.0.0.jar')
 }
