--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:theme="@style/AppTheme"
         tools:replace="android:icon">
         <activity
-            android:name=".MainActivity"
+            android:name=".Activities.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="landscape"
             android:theme="@style/AppTheme.NoActionBar"
@@ -34,7 +34,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ROSCam"
+            android:name=".ROSClasses.ROSCam"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/action_roscam"
             android:screenOrientation="landscape" />
@@ -52,27 +52,27 @@
         <!-- android:parentActivityName=".MainActivity"> -->
         <!-- <meta-data -->
         <!-- android:name="android.support.PARENT_ACTIVITY" -->
-        <!-- android:value="utmg.android_interface.MainActivity" /> -->
+        <!-- android:value="utmg.android_interface.Activities.MainActivity" /> -->
         <!-- </activity> -->
         <activity
-            android:name=".SettingsActivity"
+            android:name=".Activities.SettingsActivity"
             android:label="@string/title_activity_objects"
-            android:parentActivityName=".MainActivity"
+            android:parentActivityName=".Activities.MainActivity"
             android:screenOrientation="landscape"
             android:launchMode="singleTop">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="utmg.android_interface.MainActivity" />
+                android:value="utmg.android_interface.Activities.MainActivity" />
         </activity>
         <activity
-            android:name=".PreviewActivity"
+            android:name=".Activities.PreviewActivity"
             android:label="@string/title_activity_preview"
-            android:parentActivityName=".MainActivity"
+            android:parentActivityName=".Activities.MainActivity"
             android:screenOrientation="landscape"
             android:launchMode="singleTask">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="utmg.android_interface.MainActivity" />
+                android:value="utmg.android_interface.Activities.MainActivity" />
         </activity>
     </application>
 
