Manual pull request from James into dev2

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '26.0.0'
+    buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "utmg.android_interface"
         minSdkVersion 16
@@ -55,5 +55,4 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile files('libs/app_pathplanner_interface-0.0.0.jar')
     compile files('libs/mav_trajectory_generation_ros-0.0.0.jar')
-    compile files('libs/curve_compression-0.0.0.jar')
 }
