--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Apr 28 15:07:09 CDT 2017
-sdk.dir=/home/jfl3/Android/Sdk
+#Thu Aug 31 18:24:27 CDT 2017
+sdk.dir=/opt/Android/Sdk
