Preview canvas is now agnostic to field dimensions

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,11 +66,8 @@
         <activity
             android:name=".PreviewActivity"
             android:label="@string/title_activity_preview"
-            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar"
             android:launchMode="singleTask">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="utmg.android_interface.MainActivity" />
         </activity>
     </application>
 
