--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,13 @@
         <activity
             android:name=".Activities.SplashActivity"
             android:label="@string/app_name"
-            android:screenOrientation="landscape"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:launchMode="singleTop">
+
+        </activity>
+        <activity
+            android:name=".Activities.MainActivity"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
             android:launchMode="singleTop">
             <intent-filter>
@@ -32,16 +38,8 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".Activities.MainActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="landscape"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:launchMode="singleTop">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="utmg.android_interface.Activities.SplashActivity" />
+            <!--    android:name="android.support.PARENT_ACTIVITY"
+                android:value="utmg.android_interface.Activities.SplashActivity" /> -->
         </activity>
         <activity
             android:name=".ROSClasses.ROSCam"
@@ -78,7 +76,6 @@
             android:name=".Activities.PreviewActivity"
             android:label="@string/title_activity_preview"
             android:parentActivityName=".Activities.MainActivity"
-            android:screenOrientation="landscape"
             android:launchMode="singleTask">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
