--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Aug 04 13:49:54 PDT 2017
-sdk.dir=/opt/Android/Sdk
+#Sat Oct 14 16:54:33 CDT 2017
+sdk.dir=/Users/tuckerhaydon/Library/Android/sdk
