--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 /app/*.iml
 .idea
 .gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
+local.properties
 .DS_Store
 /build
 /captures
