--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,14 +22,14 @@
         android:theme="@style/AppTheme"
         tools:replace="android:icon">
         <activity
-            android:name=".Activities.SplashActivity"
+            android:name=".activity.SplashActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
             android:launchMode="singleTop">
 
         </activity>
         <activity
-            android:name=".Activities.MainActivity"
+            android:name=".activity.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
             android:launchMode="singleTop">
@@ -42,7 +42,7 @@
                 android:value="utmg.android_interface.Activities.SplashActivity" /> -->
         </activity>
         <activity
-            android:name=".ROSClasses.ROSCam"
+            android:name=".ROS.ROSCam"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/action_roscam"
             android:screenOrientation="landscape" />
@@ -63,23 +63,23 @@
         <!-- android:value="utmg.android_interface.Activities.MainActivity" /> -->
         <!-- </activity> -->
         <activity
-            android:name=".Activities.SettingsActivity"
+            android:name=".activity.SettingsActivity"
             android:label="@string/title_activity_objects"
-            android:parentActivityName=".Activities.MainActivity"
+            android:parentActivityName=".activity.MainActivity"
             android:screenOrientation="landscape"
             android:launchMode="singleTop">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="utmg.android_interface.Activities.MainActivity" />
+                android:value="utmg.android_interface.activity.MainActivity" />
         </activity>
         <activity
-            android:name=".Activities.PreviewActivity"
+            android:name=".activity.PreviewActivity"
             android:label="@string/title_activity_preview"
-            android:parentActivityName=".Activities.MainActivity"
+            android:parentActivityName=".activity.MainActivity"
             android:launchMode="singleTask">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="utmg.android_interface.Activities.MainActivity" />
+                android:value="utmg.android_interface.activity.MainActivity" />
         </activity>
     </application>
 
